--- a/_posts/2022-11-28-526.md
+++ b/_posts/2022-11-28-526.md
@@ -4,14 +4,27 @@ title: "526"
 date: 2022-11-28 00:00:00 -700
 categories: Blog
 ---
+&emsp;It won’t happen right away, but sometime soon, this blog will change. I’ve been
+undertaking the slow process of moving it to a new home for a while. It will
+look different, because, well, everything needs a change sometime. It will work
+in a slightly different way. If anyone is subscribed through rss I will try to
+make it seamless, or at least provide some forewarning before everything
+changes.
 
-<div class="blog-content">
-				
-				It won’t happen right away, but sometime soon, this blog will change. I’ve been undertaking the slow process of moving it to a new home for a while. It will look different, because, well, everything needs a change sometime. It will work in a slightly different way. If anyone is subscribed through rss I will try to make it seamless, or at least provide some forewarning before everything changes.
+&emsp;There is one other change that will be the biggest one, at least for me. This
+blog may not post every Monday like it has in the past. Usually it will. I am
+moving from a web based hosting wysiwyg editor to a markdown based system. That
+in itself isn’t a big problem. I can deal with writing a few markdown tags. The
+problem might be that if I happen to not have a usable dev environment available
+on any given Monday, or I haven’t managed to schedule my post beforehand, they
+might not get posted up until I get back to my pc.
 
-				There is one other change that will be the biggest one, at least for me. This blog may not post every Monday like it has in the past. Usually it will. I am moving from a web based hosting wysiwyg editor to a markdown based system. That in itself isn’t a big problem. I can deal with writing a few markdown tags. The problem might be that if I happen to not have a usable dev environment available on any given Monday, or I haven’t managed to schedule my post beforehand, they might not get posted up until I get back to my pc.
-				
-				I know that not many people read this blog. Most likely, no one will notice if a post goes up on a Tuesday or Wednesday. I’m not too worried about it. I think I like the idea that I will have more freedom with how I create posts. Sometimes I might have to be okay with them not getting posted at the same time every week.
-				Regardless of when posts go up, I still plan on posting once a week until further notice. This post marks 526 weeks. That’s over 10 years. If I was going to quit writing, I would have done it a long time ago. 
-</div>
+&emsp;I know that not many people read this blog. Most likely, no one will notice if a
+post goes up on a Tuesday or Wednesday. I’m not too worried about it. I think I
+like the idea that I will have more freedom with how I create posts. Sometimes I
+might have to be okay with them not getting posted at the same time every week.
+
+&emsp;Regardless of when posts go up, I still plan on posting once a week until
+further notice. This post marks 526 weeks. That’s over 10 years. If I was going
+to quit writing, I would have done it a long time ago.
         
